# CPP-Chess

./: CMakeLists.txt  Test.cpp  stdafx.h
game_management/: bishop.cpp  bishop.h  board.cpp  board.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
